templates/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: cat-api-doc
spec:
  host: cat-api-spec.local
  to:
    kind: Service
    name: cat-api-doc
